# advent-of-code

./: .gitignore  README.md  cabal.project
2015/haskell/: Day01.hs  Day20.hs  aoc2015.cabal  haskell.cabal
2016/: README.md
2016/haskell/: Day05.hs  Day16.hs  aoc2016.cabal  haskell.cabal
2016/rust/src/: lib.rs  main.rs
2017/haskell/: Day02.hs  Day05.hs  Day06.hs  Day07.hs  Day10.hs  Day15.hs  aoc2017.cabal  haskell.cabal
2018/: README.md
2018/haskell/: Common.hs  Day03.hs  Day04.hs  aoc2018.cabal  haskell.cabal
2019/: README.md
2019/haskell/: Day04.hs  Day06.hs  aoc2019.cabal  haskell.cabal
2020/: README.md
2020/haskell/: Day01.hs  Day04.hs  Day09.hs  Day10.hs  Day12.hs  Day13.hs  aoc2020.cabal  haskell.cabal
2021/: README.md
2021/haskell/: Day01.hs  Day02.hs  Day04.hs  aoc2021.cabal  haskell.cabal
2022/haskell/: Day04.hs  Day06.hs  aoc2022.cabal  haskell.cabal
2023/: README.md
2023/haskell/: Day01.hs  Day04.hs  Day11.hs  Day14.hs  Day15.hs  Day16.hs  Day22.hs  Day23.hs  aoc2023.cabal  haskell.cabal
2024/: README.md
2024/haskell/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  aoc2024.cabal  haskell.cabal
2025/haskell/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  aoc2025.cabal
common/: Common.hs  common.cabal
