cabal-version:      2.4
name:               aoc2015
version:            0.1.0.0

synopsis: Advent of Code 2015 solutions.
description: Haskell solutions for Advent of Code 2015.

common day
    build-depends:
        base == 4.*,
        common,
        containers,
        array,
        bytestring,
        binary,
        split
    default-language:   Haskell2010
    default-extensions: NumericUnderscores, TypeApplications, TupleSections

executable 01
    import:  day
    main-is: Day01.hs

executable 02
    import:  day
    main-is: Day02.hs

executable 03
    import:  day
    main-is: Day03.hs

executable 04
    import:  day
    build-depends: cryptonite
    main-is: Day04.hs

executable 05
    import:  day
    main-is: Day05.hs

executable 19
    import:  day
    main-is: Day19.hs

executable 20
    import:  day
    main-is: Day20.hs

executable 21
    import:  day
    main-is: Day21.hs

executable 23
    import:  day
    main-is: Day23.hs

executable 25
    import:  day
    main-is: Day25.hs
