cabal-version:      2.4
name:               haskell
version:            0.1.0.0

synopsis: Advent of Code 2019 solutions.
description: Haskell solutions for Advent of Code 2019.

common day
    build-depends:
        base == 4.*,
        containers,
        array,
        bytestring,
        binary,
        split
    default-language: Haskell2010
    other-modules:    Common

library
    exposed-modules:  Common
    build-depends:    base == 4.*, containers
    default-language: Haskell2010

executable 01
    import:  day
    main-is: Day01.hs

executable 03
    import:  day
    main-is: Day03.hs

executable 04
    import:  day
    main-is: Day04.hs

executable 06
    import:  day
    main-is: Day06.hs

executable 08
    import:  day
    main-is: Day08.hs
