cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

synopsis: Advent of Code 2022 solutions.
description: Haskell solutions for Advent of Code 2022.

common day
    build-depends:
        base == 4.*,
        common,
        containers,
        array,
        bytestring,
        binary,
        split
    default-language: Haskell2010
    default-extensions: NumericUnderscores, TypeApplications, TupleSections

executable 01
    import:  day
    main-is: Day01.hs

executable 02
    import:  day
    main-is: Day02.hs

executable 03
    import:  day
    main-is: Day03.hs

executable 04
    import:  day
    main-is: Day04.hs

executable 06
    import:  day
    main-is: Day06.hs

executable 12
    import:  day
    main-is: Day12.hs

executable 22
    import:  day
    main-is: Day22.hs

executable 25
    import:  day
    main-is: Day25.hs
