cabal-version:      2.4
name:               aoc2024
version:            0.1.0.0

synopsis: Advent of Code 2024 solutions.
description: Haskell solutions for Advent of Code 2024.

common day
    build-depends:
        base == 4.*,
        common,
        containers,
        array,
        bytestring,
        binary,
        split
    default-language:   Haskell2010
    default-extensions: NumericUnderscores, TypeApplications, TupleSections

executable 01
    import:  day
    main-is: Day01.hs

executable 02
    import:  day
    main-is: Day02.hs
 
executable 03
    import:  day
    build-depends: regex-tdfa
    main-is: Day03.hs

executable 04
    import:  day
    main-is: Day04.hs

executable 05
    import:  day
    main-is: Day05.hs

executable 06
    import:  day
    main-is: Day06.hs

executable 07
    import:  day
    main-is: Day07.hs

executable 08
    import:  day
    main-is: Day08.hs

executable 09
    import:  day
    main-is: Day09.hs

executable 10
    import:  day
    main-is: Day10.hs

executable 11
    import:  day
    main-is: Day11.hs
