cabal-version:      2.4
name:               haskell
version:            0.1.0.0

synopsis: Advent of Code 2024 solutions.
description: Haskell solutions for Advent of Code 2024.

common day
    build-depends:
        base == 4.*,
        containers,
        array,
        bytestring,
        binary,
        split
    default-language: Haskell2010
    other-modules:    Common

library
    exposed-modules:  Common
    build-depends:    base == 4.*, containers
    default-language: Haskell2010

executable 01
    import:  day
    main-is: Day01.hs